# excalidraw-image

./: .gitignore  Cargo.toml  Makefile  PHASE0.md  PLAN.md  README.md  TASKS.md  deno.json  eslint.config.js  homebrew-tap-formula.rb  package-lock.json  package.json  release.toml  tsconfig.json  vitest.config.mjs
.github/: actionlint.yaml
.github/templates/: excalidraw-image.rb.tmpl
.github/workflows/: release.yml  test.yml
Formula/: excalidraw-image.rb
crates/excalidraw-image/: Cargo.toml  build.rs
crates/excalidraw-image-fonts-cjk/: Cargo.toml  README.md  build.rs
crates/excalidraw-image-fonts-cjk-extra/: Cargo.toml  LICENSE  README.md  build.rs
crates/excalidraw-image-fonts-cjk-extra/src/: lib.rs
crates/excalidraw-image-fonts-cjk/src/: lib.rs
crates/excalidraw-image-fonts-core/: Cargo.toml  README.md  build.rs
crates/excalidraw-image-fonts-core/src/: lib.rs
crates/excalidraw-image/assets/: core.mjs
crates/excalidraw-image/src/: argv.rs  embed.rs  engine.rs  extract.rs  lib.rs  main.rs  raster.rs
crates/excalidraw-image/tests/: errors.rs  parity.rs  png.rs  round_trip.rs  smoke.rs
docs/: fidelity.md
spike/: .gitignore  README.md  build.mjs  dev.mjs  entry.mjs  package.json  shims.mjs
spike-rust/: Cargo.toml  README.md
spike-rust/src/: main.rs  polyfills.js
src/core/: dev.mjs  index.mjs  text-metrics.mjs
src/core/shims/: canvas.mjs  dom.mjs  fetch-fonts.mjs  fonts.mjs  install.mjs  web-globals.mjs  workers.mjs
src/core/stubs/: proxy.mjs
src/scripts/: browser-font-baseline.mjs  build-core.mjs  build-font-assets.mjs  build-woff2-blob.mjs  check-font-fingerprints.mjs  metafile-audit.mjs  regen-goldens.mjs  sync-fonts.mjs
tests/deno/: render.test.mjs
tests/fixtures/: basic-shapes.excalidraw  basic-shapes.svg.golden  browser-font-baseline.json  frames.excalidraw  frames.svg.golden  image-cropped.excalidraw  image-cropped.svg.golden  image.excalidraw  image.svg.golden  mixed-script.excalidraw  mixed-script.svg.golden  text-wrapped.excalidraw  text-wrapped.expected.json  text-wrapped.svg.golden  wrap-400.excalidraw  wrap-400.svg.golden
tests/js/: browser-fidelity.test.mjs  bundle-smoke.test.mjs  embed-scene-roundtrip.test.mjs  embed-scene-serialization.test.mjs  embed-scene.test.mjs  font-emoji-local-only.test.mjs  font-helvetica-alias.test.mjs  font-inventory-smoke.test.mjs  font-inventory.test.mjs  font-roundtrip.test.mjs  font-strict-fonts.test.mjs  font-subset.test.mjs  images-frames-smoke.test.mjs  render.test.mjs  setup-embedded-fonts.mjs  svg-goldens.test.mjs  text-metrics.test.mjs  wrap-regression.test.mjs
tests/js/shims/: canvas.test.mjs  dom.test.mjs  fetch-fonts.test.mjs  fonts.test.mjs  install.test.mjs  web-globals.test.mjs  workers.test.mjs
tests/rust/: deno-run.mjs
