[package]
name = "spike-rust"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
deno_core = "0.399"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = "z"
