[package]
name = "excalidraw-image-fonts-cjk-extra"
# NOT workspace-inherited. Starts at 1.0.0 since the bundled-fonts API
# (a single `pub static FONTS: &[(&str, &[u8])]` table) is stable; only
# the woff2 contents will ever change. Patch is auto-bumped by
# `npm run sync-fonts -- --bump` whenever the recorded fingerprint
# drifts from the populated `fonts/` dir.
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Bundled long-tail CJK fonts (Xiaolai — CJK Ext A + Compat Ideographs) for excalidraw-image"
repository = "https://github.com/rickardp/excalidraw-image"
homepage = "https://github.com/rickardp/excalidraw-image"
authors = ["Rickard"]
rust-version = "1.75"
include = [
    "src/**/*.rs",
    "build.rs",
    "fonts/**/*.woff2",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[package.metadata.font-fingerprint]
# SHA-256 of (sorted relative path + ":" + sha256-hex of contents) lines, joined by "\n".
# Verified by `npm run check:fonts`. Update this manually when fonts change,
# alongside a version bump.
sha256 = "023c933b9a01e3b09cc6d8f58dbb7c9aaf6376086290338814ffa1e51c1a8a61"
file_count = 44

[lib]
path = "src/lib.rs"

[package.metadata.release]
# This crate is bumped manually only when font contents change (verified by
# `npm run check:fonts`). `cargo release patch --execute` from the workspace
# root skips it. CI publishes idempotently — if version unchanged, "already
# uploaded" counts as success.
release = false
