[package]
name = "excalidraw-image-fonts-cjk-extra"
# NOT workspace-inherited. Starts at 1.0.0 since the bundled-fonts API
# (a single `pub static FONTS: &[(&str, &[u8])]` table) is stable; only
# the woff2 contents will ever change. Patch is auto-bumped by
# `npm run sync-fonts -- --bump` whenever the recorded fingerprint
# drifts from the populated `fonts/` dir.
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "Bundled long-tail CJK fonts (Xiaolai — CJK Ext A + Compat Ideographs) for excalidraw-image"
repository = "https://github.com/rickardp/excalidraw-image"
homepage = "https://github.com/rickardp/excalidraw-image"
authors = ["Rickard"]
rust-version = "1.75"
include = [
    "src/**/*.rs",
    "build.rs",
    "fonts/**/*.ttf.br",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[package.metadata.font-fingerprint]
# SHA-256 of (sorted relative path + ":" + sha256-hex of contents) lines, joined by "\n".
# Verified by `npm run check:fonts`. Update this manually when fonts change,
# alongside a version bump.
sha256 = "e6a4090c86aa86b17e63ab335a07bab74e81208d1975fb41d5b318124d5b6b96"
file_count = 44

[lib]
path = "src/lib.rs"

[package.metadata.release]
# This crate is bumped manually only when font contents change (verified by
# `npm run check:fonts`). `cargo release patch --execute` from the workspace
# root skips it. CI publishes idempotently — if version unchanged, "already
# uploaded" counts as success.
release = false
