[package]
name = "excalidraw-image-fonts-cjk"
# NOT workspace-inherited. Starts at 1.0.0 since the bundled-fonts API
# (a single `pub static FONTS: &[(&str, &[u8])]` table) is stable; only
# the woff2 contents will ever change. Patch is auto-bumped by
# `npm run sync-fonts -- --bump` whenever the recorded fingerprint
# drifts from the populated `fonts/` dir.
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Bundled CJK fonts (Xiaolai) for excalidraw-image"
repository = "https://github.com/rickardp/excalidraw-image"
homepage = "https://github.com/rickardp/excalidraw-image"
authors = ["Rickard"]
rust-version = "1.75"
include = [
    "src/**/*.rs",
    "build.rs",
    "fonts/**/*.woff2",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[package.metadata.font-fingerprint]
# SHA-256 of (sorted relative path + ":" + sha256-hex of contents) lines, joined by "\n".
# Verified by `npm run check:fonts`. Update this manually when fonts change,
# alongside a version bump.
sha256 = "630cb497d7b7de4fea58a890b78a2de5ea0e74221d8b876156de4993698e24ad"
file_count = 165

[lib]
path = "src/lib.rs"

[package.metadata.release]
# This crate is bumped manually only when font contents change (verified by
# `npm run check:fonts`). `cargo release patch --execute` from the workspace
# root skips it. CI publishes idempotently — if version unchanged, "already
# uploaded" counts as success.
release = false
