[package]
name = "excalidraw-image-fonts-cjk"
# NOT workspace-inherited. Starts at 1.0.0 since the bundled-fonts API
# (a single `pub static FONTS: &[(&str, &[u8])]` table) is stable; only
# the woff2 contents will ever change. Patch is auto-bumped by
# `npm run sync-fonts -- --bump` whenever the recorded fingerprint
# drifts from the populated `fonts/` dir.
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "Bundled CJK fonts (Xiaolai) for excalidraw-image"
repository = "https://github.com/rickardp/excalidraw-image"
homepage = "https://github.com/rickardp/excalidraw-image"
authors = ["Rickard"]
rust-version = "1.75"
include = [
    "src/**/*.rs",
    "build.rs",
    "fonts/**/*.ttf.br",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[package.metadata.font-fingerprint]
# SHA-256 of (sorted relative path + ":" + sha256-hex of contents) lines, joined by "\n".
# Verified by `npm run check:fonts`. Update this manually when fonts change,
# alongside a version bump.
sha256 = "aa9c9260865b633248d016b3591a3d8617cb184bb65f901702be1d991b8fe66b"
file_count = 165

[lib]
path = "src/lib.rs"

[package.metadata.release]
# This crate is bumped manually only when font contents change (verified by
# `npm run check:fonts`). `cargo release patch --execute` from the workspace
# root skips it. CI publishes idempotently — if version unchanged, "already
# uploaded" counts as success.
release = false
