[package]
name = "excalidraw-image-fonts-core"
# NOT workspace-inherited. Bumped only when fonts change. Verified by
# `npm run check:fonts` (src/scripts/check-font-fingerprints.mjs).
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Bundled Latin-script fonts for excalidraw-image"
repository = "https://github.com/rickardp/excalidraw-image"
homepage = "https://github.com/rickardp/excalidraw-image"
authors = ["Rickard"]
rust-version = "1.75"
include = [
    "src/**/*.rs",
    "build.rs",
    "fonts/**/*.woff2",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[package.metadata.font-fingerprint]
# SHA-256 of (sorted relative path + ":" + sha256-hex of contents) lines, joined by "\n".
# Verified by `npm run check:fonts`. Update this manually when fonts change,
# alongside a version bump.
sha256 = "7375a2660e84bd94f720b62ec8b2364bdf0646955013bb91bb100937416a8965"
file_count = 25

[lib]
path = "src/lib.rs"

[package.metadata.release]
# This crate is bumped manually only when font contents change (verified by
# `npm run check:fonts`). `cargo release patch --execute` from the workspace
# root skips it. CI publishes idempotently — if version unchanged, "already
# uploaded" counts as success.
release = false
