[package]
name = "excalidraw-image"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Convert .excalidraw scenes to SVG and PNG. Self-contained, no Node/Bun/Deno runtime required."
repository = "https://github.com/rickardp/excalidraw-svg-export"
homepage = "https://github.com/rickardp/excalidraw-svg-export"
keywords = ["excalidraw", "svg", "cli"]
categories = ["command-line-utilities", "graphics"]
readme = "../../README.md"
authors = ["Rickard"]
rust-version = "1.75"

[[bin]]
name = "excalidraw-image"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Pin deno_core to the F-002 validated version. serde_v8 is re-exported from
# deno_core in 0.399 — no separate pin needed.
deno_core = "=0.399.0"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
lexopt = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
